--- a/react/personal/package.json
+++ b/react/personal/package.json
@@ -7,11 +7,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "boostrap": "^2.0.0",
-    "bootstrap": "^5.1.2",
+    "bootstrap": "^5.1.3",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
